k8s/04-security/fafnir/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fafnir-vault
  namespace: asgard
  labels:
    app: fafnir-vault
spec:
  type: NodePort
  selector:
    app: fafnir-vault
  ports:
    - protocol: TCP
      port: 8200
      targetPort: 8200
      nodePort: 30820
